# squaredb

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  file.pest  lib.rs  tags
.github/workflows/: jekyll-gh-pages.yml
assets/css/: style.scss
doc/: release.md
doc/_posts/: 2023-10-19-release.md
doc/assets/css/: style.scss
src/: main.rs
src/file_format/: mod.rs  ser.rs
src/rocksdb/: mod.rs
src/server/: mod.rs
src/storage/: mod.rs
src/table_management/: mod.rs
~/.squaredb/file/: IDENTITY  LOG  LOG.old.1697490312372851  LOG.old.1697490312401924  LOG.old.1697490312428401  LOG.old.1697490312455405  LOG.old.1697490312481650  LOG.old.1697490312503572  LOG.old.1697490312524468  LOG.old.1697490312546137  LOG.old.1697490312569954
