[package]
name = "squaredb"
version = "0.1.1"
edition = "2021"
authors = ["Goren Barak"]
repository = "https://github.com/gorentbarak/squaredb"
description = "A new database that I decided to make."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bincode = "1.3.3"
dirs = "5.0.1"
rocksdb = "0.21.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }

[[bin]]
name = "squaredb"
path = "src/main.rs"

[lib]
name = "libsdb"
path = "src/lib.rs"
